# x-server-template

./: .gitignore  README.md
backend/: Cargo.toml
backend/config/: default.yaml
backend/sql/: database.sql
backend/src/: main.rs
backend/src/common/: config.rs  mod.rs  redis.rs
backend/src/model/: user.rs  util.rs
backend/src/module/: mod.rs  model.rs  route.rs
backend/src/module/captcha/: mod.rs  model.rs  route.rs
backend/src/module/captcha/service/: email.rs  image.rs  mod.rs  phone.rs
backend/src/module/user/: auth.rs  mod.rs  model.rs  repository.rs  route.rs
backend/src/module/user/service/: change_avatar_url.rs  change_email.rs  change_password.rs  create.rs  delete.rs  forget.rs  info.rs  login.rs  logout.rs  mod.rs  refresh_access_token.rs  search.rs
backend/src/route/: mod.rs  user.rs  util.rs
backend/src/service/user/: change_avatar_url.rs  change_email.rs  change_password.rs  create.rs  delete.rs  info.rs  login.rs  logout.rs  mod.rs  refresh_access_token.rs  search.rs  update.rs
backend/src/service/util/captcha/: email.rs  image.rs  phone.rs
backend/src/sql/: mod.rs  user.rs
backend/src/util/: auth.rs  database.rs  email.rs  error.rs  logger.rs  mod.rs  phone.rs
frontend/: package.json
frontend/src/: App.vue  main.ts
frontend/src/component/: NavComp.vue
frontend/src/model/: index.ts  user.ts
frontend/src/router/: index.ts
frontend/src/service/: user.ts
frontend/src/service/util/: captcha.ts
frontend/src/store/: user.ts
frontend/src/util/: axios.ts
frontend/src/view/: HomeView.vue
(+2 files in other folders)
